--- a/client/src/app/index.html
+++ b/client/src/app/index.html
@@ -12,7 +12,7 @@
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,400italic' rel='stylesheet' type='text/css'>
 
         <!-- stylesheet -->
-        <link href='public/style.css' rel='stylesheet' type='text/css'>
+        <link href='style.css' rel='stylesheet' type='text/css'>
 
         <!-- bower dependencies -->
         <script type="text/javascript" src="lib/angular/angular.js"></script>
