--- a/client/src/less/mixins.less
+++ b/client/src/less/mixins.less
@@ -71,6 +71,30 @@
 	transition-timing-function: 		@style;
 }
 
+.fade-in-left(@translate){
+	0% { opacity: 0; -webkit-transform: translate3d(@translate, 0, 0); transform: translate3d(@translate, 0, 0); }
+	100% { opacity: 1; -webkit-transform: none; transform: none; }
+}
+
+.fade-in-right(@translate) {
+  0% { opacity: 0; -webkit-transform: translate3d(@translate, 0, 0); transform: translate3d(@translate, 0, 0); }
+  100% { opacity: 1; -webkit-transform: none; transform: none; }
+}
+
+.fade-in-up(@translate) {
+	0% {
+		opacity: 0;
+		-webkit-transform: translate3d(0, @translate, 0);
+		transform: translate3d(0, @translate, 0);
+	}
+
+	100% {
+		opacity: 1;
+		-webkit-transform: none;
+		transform: none;
+	}
+}
+
 .transform(@action){
 	-webkit-transform: 	 @action;
 	-moz-transform: 	 @action;
