Following and followers

--- a/client/src/app/dashboard/dashboard.less
+++ b/client/src/app/dashboard/dashboard.less
@@ -4,6 +4,13 @@
 		background: @white;
 		margin-top: @space-medium;
 	}
+	.block--half {
+		width: 48% !important;
+		float: left;
+	}
+	.block--half-last {
+		margin-right: 0 !important;
+	}
 
 	.block-container {
 		margin: @space-medium;
@@ -189,6 +196,11 @@
 		color: @lighter-grey;
 		line-height: 40px;
 		vertical-align: middle;
+	}
+
+	.all-users {
+		  margin-top: -25px;
+  		padding-left: 25px;
 	}
 
 	.template {
