--- a/client/src/app/dashboard/dashboard.tpl.html
+++ b/client/src/app/dashboard/dashboard.tpl.html
@@ -17,7 +17,7 @@
 		<div class="nav-bar">
 			<div class="container">
 				<h3 class="header pn-h3">Dashboard</h3>
-				<img class="header-avatar" ng-src="{{user.avatar}}">
+				<img class="header-avatar" ng-src="/assets/images/identicon.png">
 			</div>
 		</div>
 		<div class="container">
